feat(ci): implement staging and production dynamic environments via GitHub Releases